// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncCall basic test: no logs console.debug 1`] = `Array []`;

exports[`AsyncCall basic test: no logs console.error 1`] = `Array []`;

exports[`AsyncCall basic test: no logs console.groupCollapsed 1`] = `Array []`;

exports[`AsyncCall basic test: no logs console.groupEnd 1`] = `Array []`;

exports[`AsyncCall basic test: no logs console.log 1`] = `Array []`;

exports[`AsyncCall basic test: no logs console.warn 1`] = `Array []`;

exports[`AsyncCall logs: normal log console.debug 1`] = `
Array [
  Array [
    "Receive remote call, but not implemented.",
    "add2",
    Object {
      "id": 0.9601702866503661,
      "jsonrpc": "2.0",
      "method": "add2",
      "params": Array [
        1,
        2,
      ],
    },
  ],
]
`;

exports[`AsyncCall logs: normal log console.error 1`] = `
Array [
  Array [
    [Error: impl error],
  ],
  Array [
    "E: impl error(-1) %c@-0.9899924966004454
%c<mocked stack>",
    "color: gray",
    "",
  ],
  Array [
    [Error: impl error],
  ],
  Array [
    "E: impl error(-1) @0.28366218546322625
<mocked stack>",
  ],
  Array [
    [Error: impl error],
  ],
  Array [
    "E: impl error(-1) %c@-0.14550003380861354
%c<remote stack not available>",
    "color: gray",
    "",
  ],
]
`;

exports[`AsyncCall logs: normal log console.groupCollapsed 1`] = `
Array [
  Array [
    "undefined.%cadd%c(%o, %o%c)
%o %c@-0.4161468365471424",
    "color: #d2c057",
    "",
    1,
    2,
    "",
    Promise {},
    "color: gray; font-style: italic;",
  ],
  Array [
    "undefined.%cthrows%c(%c)
%o %c@-0.9899924966004454",
    "color: #d2c057",
    "",
    "",
    Promise {},
    "color: gray; font-style: italic;",
  ],
]
`;

exports[`AsyncCall logs: normal log console.groupEnd 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`AsyncCall logs: normal log console.log 1`] = `
Array [
  Array [
    "<mocked stack>",
  ],
  Array [
    "<mocked stack>",
  ],
  Array [
    "undefined.add(1,2) @-0.6536436208636119",
  ],
  Array [
    "undefined.throws() @0.28366218546322625",
  ],
  Array [
    "undefined.%cadd%c(%o, %o%c)
%o %c@0.7539022543433046",
    "color: #d2c057",
    "",
    1,
    2,
    "",
    Promise {},
    "color: gray; font-style: italic;",
  ],
  Array [
    "undefined.%cthrows%c(%c)
%o %c@-0.14550003380861354",
    "color: #d2c057",
    "",
    "",
    Promise {},
    "color: gray; font-style: italic;",
  ],
]
`;

exports[`AsyncCall logs: normal log console.warn 1`] = `Array []`;
